RESOLVED FIXED196154
Placate exception check validation in genericTypedArrayViewProtoFuncLastIndexOf().
https://bugs.webkit.org/show_bug.cgi?id=196154
Summary Placate exception check validation in genericTypedArrayViewProtoFuncLastIndex...
Mark Lam
Reported 2019-03-22 10:38:47 PDT
Attachments
proposed patch. (3.00 KB, patch)
2019-03-22 10:42 PDT, Mark Lam
no flags
proposed patch. (3.59 KB, patch)
2019-03-22 10:47 PDT, Mark Lam
fpizlo: review+
Mark Lam
Comment 1 2019-03-22 10:42:16 PDT
Created attachment 365742 [details] proposed patch.
Mark Lam
Comment 2 2019-03-22 10:47:52 PDT
Created attachment 365743 [details] proposed patch.
Mark Lam
Comment 3 2019-03-22 10:59:53 PDT
Thanks for the review. Landed in r243391: <http://trac.webkit.org/r243391>.
Dominik Inführ
Comment 4 2019-03-24 03:30:52 PDT
Hi! web-assembly-link-error-exception-check.js is failing on 32-bit because WebAssembly isn't supported. Shouldn't this test be moved into JSTests/wasm/stress?
Dominik Inführ
Comment 5 2019-03-24 08:42:41 PDT
I've uploaded a patch that moves this test into JSTests/wasm/stress: https://bugs.webkit.org/show_bug.cgi?id=196187
Note You need to log in before you can comment on or make changes to this bug.