Placate exception check validation in genericTypedArrayViewProtoFuncLastIndexOf(). https://bugs.webkit.org/show_bug.cgi?id=196154 <rdar://problem/49145307>

Reviewed by Filip Pizlo.

JSTests:

Also added //@ runDefault constraint to web-assembly-link-error-exception-check.js.
There's no need to run this test on more than 1 test configuration.

* stress/typed-array-lastIndexOf-exception-check.js: Added.
* stress/web-assembly-link-error-exception-check.js:

Source/JavaScriptCore:

* runtime/JSGenericTypedArrayViewPrototypeFunctions.h:
(JSC::genericTypedArrayViewProtoFuncLastIndexOf):



Canonical link: https://commits.webkit.org/210453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243391 268f45cc-cd09-0410-ab3c-d52691b4dbfc