JSTests/stress/web-assembly-link-error-exception-check.js
@@ -1,1 +1,3 @@
+//@ runDefault
+
 new WebAssembly.LinkError([]);
